tests/ui/suggestions/assoc_fn_without_self.stderr
error[E0425]: cannot find function `foo` in this scope
  --> $DIR/assoc_fn_without_self.rs:16:9
   |
LL |         foo();
   |         ^^^ not found in this scope
   |
help: consider using the associated function on `Self`
   |
LL |         Self::foo();
   |         ++++++

error[E0425]: cannot find function `bar` in this scope
  --> $DIR/assoc_fn_without_self.rs:17:9
   |
LL |     fn bar(&self) {}
   |        --- a method by that name is available on `Self` here
...
LL |         bar();
   |         ^^^ not found in this scope

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/assoc_fn_without_self.rs:18:9
   |
LL |         baz(2, 3);
   |         ^^^ not found in this scope
   |
help: consider using the associated function on `Self`
   |
LL |         Self::baz(2, 3);
   |         ++++++

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/assoc_fn_without_self.rs:14:13
   |
LL |             foo();
   |             ^^^ not found in this scope

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/assoc_fn_without_self.rs:24:9
   |
LL |         foo();
   |         ^^^ not found in this scope
   |
help: consider using the associated function on `Self`
   |
LL |         Self::foo();
   |         ++++++

error[E0425]: cannot find function `bar` in this scope
  --> $DIR/assoc_fn_without_self.rs:25:9
   |
LL |         bar();
   |         ^^^ not found in this scope
   |
help: consider using the method on `Self`
   |
LL |         self.bar();
   |         +++++

error[E0425]: cannot find function `baz` in this scope
  --> $DIR/assoc_fn_without_self.rs:26:9
   |
LL |         baz(2, 3);
   |         ^^^ not found in this scope
   |
help: consider using the associated function on `Self`
   |
LL |         Self::baz(2, 3);
   |         ++++++

error[E0425]: cannot find function `foo` in this scope
  --> $DIR/assoc_fn_without_self.rs:22:13
   |
LL |             foo();
   |             ^^^ not found in this scope

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0425`.
